have to finish streaming part

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ movies/
 playgroung.js
 config/
 backend/recommender/TMDB_movie_dataset_v11.csv
+backend/recommender/ratings.csv
+backend/recommender/__pycache__/
