--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "nodemon": "^3.1.10",
     "pg": "^8.15.1"
   }
 }
